--- a/NETFLIX/netflix.html
+++ b/NETFLIX/netflix.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
-    <link rel="stylesheet" href="/NETFLIX/netflix.css">
+    <link rel="stylesheet" href="netflix.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
     <div class="maincontainer">
         <div class="headingsection">
             <div class="leftheadingsection">
-                <img src="/NETFLIX/images/Netflix_Logo_PMS.png" alt="logo">
+                <img src="images/Netflix_Logo_PMS.png" alt="logo">
             </div>
             <div class="righttheadingsection">
                 <div class="rightheadsectioncontainer">
@@ -48,11 +48,11 @@
                 <p>Trending Now</p>
             </div>
             <div class="trendingsectioncards">
-                <img src="/NETFLIX/images/image1.jpg" alt="trending1">
-                <img src="/NETFLIX/images/image2.jpg" alt="trending2">
-                <img src="/NETFLIX/images/image3.jpg" alt="trending3">
-                <img src="/NETFLIX/images/image4.jpg" alt="trending4">
-                <img src="/NETFLIX/images/image2.jpg" alt="trending5">
+                <img src="images/image1.jpg" alt="trending1">
+                <img src="images/image2.jpg" alt="trending2">
+                <img src="images/image3.jpg" alt="trending3">
+                <img src="images/image4.jpg" alt="trending4">
+                <img src="images/image2.jpg" alt="trending5">
             </div>
         </div>
         <div class="reasonssection">
