--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
                     <p>Corporate Information</p>
                     <p>Only on Netflix</p>
                 </div>
+                <div class="footer24">
+                    <p>Media Center</p>
+                    <p>Terms of Use</p>
+                    <p>Contact Us</p>
+                </div>
             </div>
             <div class="footer3">
                 <div class="languagebox">
